[package]
name = "bus-google"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-pubsub = "0.9.0"
google-cloud-googleapis = "0.6.0"
apache-avro = { version = "0.14.0", features = ["derive"] }
relative-path = "1.7.2"
serde = "1.0"
graph = { path = "../../graph" }
